# ip6addr

./: .gitignore  .travis.yml  ChangeLog  IsIPv6Addr.hs  LICENSE  Main.hs  Makefile  README  README.md  default.nix  ip6addr.cabal  ip6addr.nix  stack.yaml
.github/workflows/: haskell-ci.yml
app/: Main.hs  ip6addr.hs
src/: CidrSuffix.hs  IP6AddrCan.hs  IP6AddrGen.hs  IP6AddrVal.hs  IPv6Addr.hs  IsIPv6Addr.hs
test/: inputs  test.pl
