name:                ip6addr
version:             1.0.1
synopsis:            Commandline tool to deal with IPv6 address text representations
description:         Commandline tool to validate, canonize and generate IPv6 address text representations
license:             BSD3
license-file:        LICENSE
author:              Michel Boucey
maintainer:          michel.boucey@gmail.com
homepage:            https://github.com/MichelBoucey/ip6addr
Copyright:           Copyright (c) 2011-2020 - Michel Boucey
Category:            Network,Console
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
 
Tested-With: GHC ==8.4.3 || ==8.6.5 || ==8.8.1

Source-Repository head
  Type: git
  Location: https://github.com/MichelBoucey/ip6addr.git

executable ip6addr
  hs-source-dirs:      app
  main-is:             Main.hs
  other-extensions:    DeriveDataTypeable
                     , OverloadedStrings
  build-depends:       base             >= 4.8 && < 5
                     , cmdargs          >= 0.10.13 && < 0.11
                     , IPv6Addr         >= 1.1.3 && < 1.2.0
                     , text             >= 1.2.2 && < 1.3
  default-language:    Haskell2010
  GHC-Options:         -Wall
